--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
     - 'pypy'
 
 install:
-    - 'pip install -r requirements.txt --use-mirrors'
+    - 'pip install requests six'
 
 before_script:
     - 'pep8 --ignore=E501,E225 dgis'
