--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ python:
     - 'pypy'
 
 install:
-    - 'pip install requests six pep8'
+    - 'pip install requests six pep8 --use-mirrors'
 
 before_script:
     - 'pep8 --ignore=E501,E225 dgis'
+    - 'if [[ $TRAVIS_PYTHON_VERSION == "2.5" ]]; then sudo pip install unittest2 --use-mirrors; fi'
+    - 'if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then sudo pip install unittest2 --use-mirrors; fi'
 
 script: python setup.py test
