--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 
 python:
-    - '2.5'
     - '2.6'
     - '2.7'
     - '3.2'
@@ -11,10 +10,9 @@ python:
 
 install:
     - 'pip install requests six pep8 --use-mirrors'
+    - 'if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install unittest2 --use-mirrors; fi'
 
 before_script:
     - 'pep8 --ignore=E501,E225 dgis'
-    - 'if [[ $TRAVIS_PYTHON_VERSION == "2.5" ]]; then sudo pip install unittest2 --use-mirrors; fi'
-    - 'if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then sudo pip install unittest2 --use-mirrors; fi'
 
 script: python setup.py test
